<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#dddfdf"
    android:paddingTop="10dp">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="2dp">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/sourceImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/circle_40"
                android:padding="2dp"
                android:scaleType="fitXY"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher" />


            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:text="name"
                android:textSize="10sp"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@+id/sourceImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/time"
                android:textSize="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="time"
                app:layout_constraintLeft_toRightOf="@+id/sourceImage"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <View
                android:id="@+id/separator"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@+id/time"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteX="50dp" />

            <TextView
                android:id="@+id/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textSize="10sp"
                android:text="heading"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintTop_toBottomOf="@+id/separator" />

            <ImageView
                android:id="@+id/contentImage"
                android:layout_width="0dp"
                android:layout_height="320dp"
                android:layout_marginTop="25dp"
                android:scaleType="centerCrop"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/heading"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/contentText"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:textSize="15sp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/heading" />

            <LinearLayout
                android:id="@+id/bottomBar"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="4"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contentImage">

                <LinearLayout
                    android:id="@+id/upvotes"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    tools:layout_editor_absoluteY="8dp"
                    tools:layout_editor_absoluteX="30dp">

                    <ImageView
                        android:id="@+id/imageView1_1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ic_thumb_up" />

                    <TextView
                        android:id="@+id/upvoteCount"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:textSize="10sp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/vote" />

                    <ImageView
                        android:id="@+id/imageView1_2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ic_thumb_down" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    tools:layout_editor_absoluteY="281dp"
                    tools:layout_editor_absoluteX="30dp">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_chat" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:textSize="10sp"
                        android:layout_weight="1"
                        android:layout_marginRight="10dp"
                        android:gravity="center_vertical|left"
                        android:text="@string/comments" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/comments"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    tools:layout_editor_absoluteY="281dp"
                    tools:layout_editor_absoluteX="30dp">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ic_share" />

                    <TextView
                        android:id="@+id/commentsCount"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:textSize="10sp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|left"
                        android:drawableLeft=""
                        android:text="@string/share" />
                </LinearLayout>


            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>